tests/ui/attributes/instrument_fn.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/instrument_fn.rs:14:9
   |
LL |         #[instrument_fn = "off"]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: attributes on expressions are experimental
  --> $DIR/instrument_fn.rs:47:14
   |
LL |     let _x = #[instrument_fn = "on"]
   |              ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: the `instrument_fn` attribute cannot be used on crates
  --> $DIR/instrument_fn.rs:2:4
   |
LL | #![instrument_fn = "off"]
   |    ^^^^^^^^^^^^^
   |
   = help: the `instrument_fn` attribute can only be applied to functions

error: the `instrument_fn` attribute cannot be used on structs
  --> $DIR/instrument_fn.rs:4:3
   |
LL | #[instrument_fn = "on"]
   |   ^^^^^^^^^^^^^
   |
   = help: the `instrument_fn` attribute can only be applied to functions

error: the `instrument_fn` attribute cannot be used on modules
  --> $DIR/instrument_fn.rs:7:3
   |
LL | #[instrument_fn = "on"]
   |   ^^^^^^^^^^^^^
   |
   = help: the `instrument_fn` attribute can only be applied to functions

error: the `instrument_fn` attribute cannot be used on inherent impl blocks
  --> $DIR/instrument_fn.rs:10:3
   |
LL | #[instrument_fn = "on"]
   |   ^^^^^^^^^^^^^
   |
   = help: the `instrument_fn` attribute can only be applied to functions

error: the `instrument_fn` attribute cannot be used on expressions
  --> $DIR/instrument_fn.rs:14:11
   |
LL |         #[instrument_fn = "off"]
   |           ^^^^^^^^^^^^^
   |
   = help: the `instrument_fn` attribute can only be applied to functions

error: the `instrument_fn` attribute cannot be used on traits
  --> $DIR/instrument_fn.rs:20:3
   |
LL | #[instrument_fn = "off"]
   |   ^^^^^^^^^^^^^
   |
   = help: the `instrument_fn` attribute can only be applied to functions

error: the `instrument_fn` attribute cannot be used on required trait methods
  --> $DIR/instrument_fn.rs:22:7
   |
LL |     #[instrument_fn = "off"]
   |       ^^^^^^^^^^^^^
   |
   = help: the `instrument_fn` attribute can only be applied to functions with a body

error[E0805]: malformed `instrument_fn` attribute input
  --> $DIR/instrument_fn.rs:37:1
   |
LL | #[instrument_fn(entry = "on")]
   | ^^^^^^^^^^^^^^^--------------^
   |                |
   |                expected a single argument here
   |
help: must be of the form
   |
LL - #[instrument_fn(entry = "on")]
LL + #[instrument_fn = "on|off"]
   |

error[E0539]: malformed `instrument_fn` attribute input
  --> $DIR/instrument_fn.rs:40:1
   |
LL | #[instrument_fn]
   | ^^^^^^^^^^^^^^^^ valid arguments are "on" or "off"
   |
help: must be of the form
   |
LL | #[instrument_fn = "on|off"]
   |                 ++++++++++

error[E0539]: malformed `instrument_fn` attribute input
  --> $DIR/instrument_fn.rs:43:1
   |
LL | #[instrument_fn = 1]
   | ^^^^^^^^^^^^^^^^^^-^
   |                   |
   |                   valid arguments are "on" or "off"
   |
help: must be of the form
   |
LL - #[instrument_fn = 1]
LL + #[instrument_fn = "on|off"]
   |

error: the `instrument_fn` attribute cannot be used on closures
  --> $DIR/instrument_fn.rs:47:16
   |
LL |     let _x = #[instrument_fn = "on"]
   |                ^^^^^^^^^^^^^
   |
   = help: the `instrument_fn` attribute can be applied to functions and methods

error: aborting due to 13 previous errors

Some errors have detailed explanations: E0539, E0658, E0805.
For more information about an error, try `rustc --explain E0539`.
